// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tag matches snapshot correctly 1`] = `
<div
  class="brd-c-etXnji brd-c-etXnji-jhuSHf-size-md brd-c-etXnji-kNKPai-color-primary"
>
  test
</div>
`;

exports[`tagGroup matches snapshot correctly 1`] = `
<div
  class="brd-c-etXnji brd-c-etXnji-euzDcH-size-lg brd-c-etXnji-kNKPai-color-primary"
>
  Abc
</div>
`;
